--- a/templates/formtools/wizard/wizard_form.html
+++ b/templates/formtools/wizard/wizard_form.html
@@ -43,15 +43,27 @@
     {% endfor %}
 {% else %}
 	{% for field in form %}
-    <div class="form-group">
-        {{ field.errors }}
-        <label>{{ field.label_tag }} </label>
-        <div style="padding:0px 20px;"><p>{{ field }}</p>
-        	{% if field.help_text %}
-        	<p class="help">{{ field.help_text|safe }}</p>
-        	{% endif %}
-        </div>
-    </div>
+		{% if field.field.widget|klass == "Bool" %}
+    		<div class="form-group">
+      	  {{ field.errors }}
+     	   <label>{{ field }}{{ field.label_tag }} </label>
+    	    <div style="padding:0px 20px;">
+      		  	<p class="help">{{ field.help_text|safe }}</p>
+      	  </div>
+   		</div>
+    		
+    	{% else %}
+    	<div class="form-group">
+    	{{ field.field.widget|klass }}
+      	  {{ field.errors }}
+     	   <label>{{ field.label_tag }} </label>
+    	    <div style="padding:0px 20px;"><p>{{ field }}</p>
+      		  	{% if field.help_text %}
+      		  	<p class="help">{{ field.help_text|safe }}</p>
+      		  	{% endif %}
+      	  </div>
+   		</div>
+   		{% endif %}
 {% endfor %}
 
 {% endif %}
