--- a/templates/formtools/wizard/wizard_form.html
+++ b/templates/formtools/wizard/wizard_form.html
@@ -46,14 +46,23 @@
 {% else %}
 	{% for field in form %}
 		{% if field.field.widget|klass == "CheckboxInput" %}
-    		<div class="form-group">
-      	  {{ field.errors }}
-     	   <label>{{ field }} {{ field.label_tag }} </label>
-    	    <div style="padding:0px 20px;">
-      		  	<p class="help">{{ field.help_text|safe }}</p>
-      	  </div>
-   		</div>
-    		
+			{% if field.label_tag|length < 100 %}
+				</div>
+    			<div class="form-group">
+     	   			<h3>{{ field }} {{ field.label_tag }}</h3>
+    	    		<div style="padding:0px 20px;">
+      		  			<p class="help">{{ field.help_text|safe }}</p>
+      	  			</div>
+   				</div>
+      	  		<div style="padding:0px 20px;">
+      	  	{% else %}
+    			<div class="form-group">
+     	   			<p>{{ field }} {{ field.label_tag }}</p>
+    	    		<div style="padding:0px 20px;">
+      		  			<p class="help">{{ field.help_text|safe }}</p>
+      	  			</div>
+   				</div>
+    		{% endif %}
     	{% else %}
     	<div class="form-group">
       	  {{ field.errors }}
