--- a/templates/formtools/wizard/wizard_form.html
+++ b/templates/formtools/wizard/wizard_form.html
@@ -96,8 +96,8 @@
       	* if no other value have been set.
       	*/
 		window.onload = function() {
-			for (var k in target){
-    			if (typeof target[k] !== 'function' && k.charAt(0)='{{ wizard.steps.step0 }}' {
+			for (var k in sessionStorage.importedValues){
+    			if (typeof target[k] !== 'function' && k.charAt(0)=='{{ wizard.steps.step0 }}') {
          			var field = document.getElementById('id_' + k);
          			if(field.value == "" || field.value == undefined){
          				field.value = target[k];
@@ -172,7 +172,6 @@
 			fileReader.onload = function(fileLoadedEvent) 
 			{
 				var textFromFileLoaded = fileLoadedEvent.target.result;
-				alert(textFromFileLoaded);
 				copyToSession(textFromFileLoaded);
 			};
 			fileReader.readAsText(fileToLoad, "UTF-8");
@@ -192,11 +191,11 @@
 		{
 			var pos = 0;
 			var result = "";
-			var lookFor = "'"+ val +"': '[";
+			var lookFor = "'"+ val +"': ['";
 			if(txt.indexOf(lookFor) > -1){
 				var temp = "";
 				pos = txt.indexOf(lookFor) + lookFor.length;
-				while(txt.charAt(pos) != "'" && txt.charAt(pos) != "]"){
+				while(txt.charAt(pos) != "'" && txt.charAt(pos+1) != "]"){
 					temp += txt.charAt(pos);
 					pos ++;
 				}
@@ -215,25 +214,29 @@
 		*	Return:
 		*		The next key.
 		*/
-		function getNextKey(pos,txt)
-		{
+		function getNextKey(posi,txt)
+		{	
+			var pos = posi;
 			var found = false;
 			var result = "";
-			while (!found) {
+			while (!found || pos== txt.length) {
 				var lookFor = "'";
 				var temp = "";
+				
 				if(txt.indexOf(lookFor,pos) > -1){
-					pos = txt.indexOf(lookFor) + lookFor.length;
-					while(txt.charAt(pos) != "'"){
+					pos = txt.indexOf(lookFor,pos) + lookFor.length;
+					while(txt.charAt(pos) != "'" || pos== txt.length){
 						temp += txt.charAt(pos);
 						pos ++;
 					}
-					if(temp.indexOf("-") = 1){
+					if(temp.indexOf("-") == 1){
 						result = temp;
 						found = true;
 					}
+					pos ++;
 				}
 				else {
+					alert("Finish");
 					found = true;
 				} 
 			}
@@ -249,13 +252,18 @@
 		function copyToSession(txt)
 		{
 			pos = 0;
-			while true {
+			while (true) {
 				keyArray = getNextKey(pos,txt);
 				key = keyArray[0];
+				if(key == "" || key == undefined){
+					alert("Vide");
+					break;
+				}
 				pos = keyArray[1];
 				val = getValueOf(key,txt);
-				sessionStorage.importedValues[key] = val;
+				sessionStorage.setItem(key,val);
 			}
+			alert("Done");
 		}
     	</script>
   </body>
